k8s/schedule/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1-deployment
spec:
  replicas: 1                      # кількість екземплярів Pod, що буде створено цим Deployment
  selector:
    matchLabels:
      app: schedule                # селектор по якому Deployment зв'язаний з Pod
  template:
    metadata:
      labels:
        app: schedule               # мітка Pod по якому вона буде зв'язана з Deployment та Service
    spec:
      containers:
        - image: service1:01       # образ Docker
          imagePullPolicy: Never   # вказує k8s, що образ не потрібно завантажувати (варто використовувати лише для випадків, коли образи локальні)
          name: service1           # ім'я контейнеру
          ports:
            - containerPort: 8083 # порт по якому можна звертатись до поди
