k8s/schedule/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schedule-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /schedule
            pathType: "Prefix"
            backend:
              service:
                name: schedule-service
                port:
                  number: 8083
